syntax = "proto3";

option java_multiple_files = true;
option java_package = "pl.edu.agh.student.kjarosz.distributedsystems.bank.exchange.api";

package bank_exchange;

message ExchangeSubscription {
    string base_currency = 1;
    repeated string monitored_currencies = 2;
}

message ExchangeResponse {
    repeated ExchangeChange changes= 2;
}

message ExchangeChange {
    string changed_currency = 1;
    double exchange_rate = 2;
}

service ExchangeService {
    rpc monitor_currencies (ExchangeSubscription) returns (stream ExchangeResponse) {

    }
}
